<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WJ 24 Game</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="add">+</string>
    <string name="sub">-</string>
    <string name="mul">*</string>
    <string name="div">/</string>
    <string name="left">(</string>
    <string name="right">)</string>
    <string name="clear">clear</string>
    <string name="check">check</string>
    <string name="showallanswers">show all answers</string>
    <string name="next">next</string>
    <string name="exit">exit</string>

    <color name="red">#ffff0000</color>
    <color name="yellow">#ffffff00</color>

    <string name="title_activity_answers">Answers</string>
    
    <string name="back">back</string>

</resources>
